CreateIriSameAsUriLinks launcher